fix javadoc gen